# sst-auditor-agent-pro-backend

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sst-agent-document.md  CLAUDE.MD  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sst-auditor-agent-pro-backend.code-workspace
.claude/: settings.json
.github/workflows/: ci.yml
.openspec-cli/: .fix-prompt.md  .last-prompt.md  .pr-diff.patch  .review-output.md  README.md  install-vault-patch.sh  install.sh
.openspec-cli/commands/: os-agent  os-commit  os-create-ticket  os-develop  os-enrich  os-enrich-apply  os-language  os-plan  os-review  os-review-apply  os-review-fix  os-stack  os-tickets  os-transition  os-vault-account  os-vault-balances  os-vault-deploy  os-vault-lint  os-vault-simulate  os-vault-test
.openspec-cli/lib/: agent.sh  colors.sh  config.sh  install.sh  jira.sh  jira_upload.py  language.sh  parse_agent.py  parse_config.py  parse_language.py  parse_stack.py  vault.sh  vault_deploy_payload.py  vault_lint.py  vault_simulate_payload.py
ai-specs/.agents/: backend-developer.md
ai-specs/.commands/: commit.md  develop-backend.md  enrich-us.md  plan-backend-ticket.md  review-fix-summary.md  review-pr.md
ai-specs/changes/: KAN-10_backend.md  KAN-10_enriched.md.applied  KAN-10_review.md  KAN-1_backend.md  KAN-6_backend.md  KAN-7_backend.md  KAN-8_backend.md  SP-137_backend.md  SP-137_review.md.applied  SP-138_enriched.md.applied  fix-1_commit.md  tickets-20260702.md
ai-specs/specs/: api-spec.yml  base-standards.mdc  data-model.md  development_guide.md  documentation-standards.mdc  vault-smart-contracts-standards.mdc
alembic/: env.py  script.py.mako
alembic/versions/: a1b2c3d4e5f6_crear_tabla_usuarios.py  b2c3d4e5f6a7_crear_catalogos_sst.py  c3d4e5f6a7b8_crear_tablas_autoevaluacion.py  d4e5f6a7b8c9_crear_tablas_matriz_gtc45.py
contracts/: current_account.py  fixed_term_deposit.py  savings_product.py
contracts_sdk/contracts_sdk/: setup.py
docs/diagramas/: diagrama_er_sst.dbml
openspec/: README.md  config.yaml  config.yaml.bak
scripts/: __init__.py  crear_usuario_admin.py  sembrar_catalogos_gtc45.py  sembrar_datos.py  sembrar_estandares_minimos.py
scripts/datos/: catalogos_gtc45.json  estandares_minimos_res312.json
src/: main.py
tests/: conftest.py  test_current_account.py  test_example.py  test_fixed_term_deposit.py  test_main.py  test_savings_product.py  test_vault_lint.py
tests/domain/: test_domain_exception.py
tests/fixtures/: catalogos_gtc45_minimo.json  estandares_minimos_minimo.json
tests/infrastructure/: test_configuracion_logging.py  test_settings.py
tests/integration/: __init__.py  conftest.py  helpers_auth.py  test_auth_login.py  test_auth_refresh.py  test_auth_yo.py  (+4 more)
(+255 files in other folders)
