[project]
name = "sst-auditor-agent-pro-backend"
version = "0.1.0"
description = "Backend de SST Auditor Agent Pro — FastAPI + Domain-Driven Design"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
# B008: Depends(...) as a default argument is FastAPI's documented dependency-injection idiom.
# N818: domain exceptions are named "*Exception" (not "*Error") per SP-137's spec.
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
