[project]
name = "sst-auditor-agent-pro-backend"
version = "0.1.0"
description = "Backend de SST Auditor Agent Pro — FastAPI + Domain-Driven Design"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic-settings==2.14.0",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "bcrypt==5.0.0",
    "pyjwt==2.13.0",
    "email-validator==2.3.0",
]

[tool.poetry]
# Proyecto de aplicación (no publicable como paquete): Poetry solo gestiona dependencias.
package-mode = false

[tool.poetry.group.dev.dependencies]
aiosqlite = "0.22.1"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
httpx = "0.28.1"
ruff = "0.15.20"
mypy = "2.1.0"
pre-commit = ">=4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Scripts internos del framework OpenSpec — no forman parte del código de la aplicación.
extend-exclude = [".openspec-cli"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
# B008: Depends(...) as a default argument is FastAPI's documented dependency-injection idiom.
# N818: domain exceptions are named "*Exception" (not "*Error") per SP-137's spec.
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
